chore: update docker-compose and add debug
