# docs/swagger.yaml
@@ -67,15 +67,6 @@ definitions:
       state:
         type: integer
     type: object
-  model.TagSwagger:
-    properties:
-      list:
-        items:
-          $ref: '#/definitions/model.Tag'
-        type: array
-      pager:
-        $ref: '#/definitions/app.Pager'
-    type: object
 info:
   contact: {}
   description: A blog backend program developed with Gin.
@@ -384,29 +375,6 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: Delete A Tag
-    get:
-      parameters:
-      - description: tag id
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            $ref: '#/definitions/model.TagSwagger'
-        "400":
-          description: request error
-          schema:
-            $ref: '#/definitions/errcode.Error'
-        "500":
-          description: internal server error
-          schema:
-            $ref: '#/definitions/errcode.Error'
-      summary: Get A Tag
     put:
       parameters:
       - description: tag id
