# internal/routers/api/v1/tag.go
@@ -6,6 +6,7 @@ import (
 	"github.com/i0Ek3/blogie/internal/service"
 	"github.com/i0Ek3/blogie/pkg/app"
 	"github.com/i0Ek3/blogie/pkg/convert"
+	"github.com/i0Ek3/blogie/pkg/debug"
 	"github.com/i0Ek3/blogie/pkg/errcode"
 )
 
@@ -15,17 +16,23 @@ func NewTag() Tag {
 	return Tag{}
 }
 
+func (t Tag) Get(c *gin.Context) {
+	debug.DebugHere("tag::", "Get")
+	app.NewResponse(c).ToErrorResponse(errcode.InternalServerError)
+}
+
 // @Summary Get Tag List
 // @Produce json
 // @Param name query string false "tag name" maxlength(100)
 // @Param state query int false "state" Enums(0,1) default(1)
 // @Param page query int false "page"
 // @Param page_size query int false "page size"
-// @Success 200 {object} model.Tag "success"
+// @Success 200 {object} model.TagSwagger "success"
 // @Failure 400 {object} errcode.Error "request error"
 // @Failure 500 {object} errcode.Error "internal server error"
 // @Router /api/v1/tags [get]
 func (t Tag) List(c *gin.Context) {
+	debug.DebugHere("tag::", "List")
 	param := service.TagListRequest{}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
@@ -59,11 +66,12 @@ func (t Tag) List(c *gin.Context) {
 // @Param name body string true "tag name" minlength(3) maxlength(100)
 // @Param state body int false "state" Enums(0,1) default(1)
 // @Param created_by body string true "creator" minlength(3) maxlength(100)
-// @Success 200 {object} model.Tag "success"
+// @Success 200 {object} model.TagSwagger "success"
 // @Failure 400 {object} errcode.Error "request error"
 // @Failure 500 {object} errcode.Error "internal server error"
 // @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {
+	debug.DebugHere("tag::", "Create")
 	param := service.CreateTagRequest{}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
@@ -90,11 +98,12 @@ func (t Tag) Create(c *gin.Context) {
 // @Param name body string false "tag name" minlength(3) maxlength(100)
 // @Param state body int false "state" Enums(0,1) default(1)
 // @Param modified_by body string true "updator" minlength(3) maxlength(100)
-// @Success 200 {object} model.Tag "success"
+// @Success 200 {object} model.TagSwagger "success"
 // @Failure 400 {object} errcode.Error "request error"
 // @Failure 500 {object} errcode.Error "internal server error"
 // @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {
+	debug.DebugHere("tag::", "Update")
 	param := service.UpdateTagRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
@@ -118,11 +127,12 @@ func (t Tag) Update(c *gin.Context) {
 // @Summary Delete A Tag
 // @Produce json
 // @Param id path int true "tag id"
-// @Success 200 {object} model.Tag "success"
+// @Success 200 {object} string "success"
 // @Failure 400 {object} errcode.Error "request error"
 // @Failure 500 {object} errcode.Error "internal server error"
 // @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {
+	debug.DebugHere("tag::", "Delete")
 	param := service.DeleteTagRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
